--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,4 +1,4 @@
-name: "CodeQL Analysis"
+name: "CodeQL Security Analysis"
 
 on:
   push:
@@ -7,6 +7,12 @@ on:
     branches: [ main ]
   schedule:
     - cron: '0 0 * * 0'  # Run once a week at midnight on Sunday
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Reason for manual trigger'
+        required: false
+        default: 'Manual security scan'
 
 jobs:
   analyze:
@@ -16,19 +22,62 @@ jobs:
       actions: read
       contents: read
       security-events: write
+      packages: read
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Fetch all history for proper change detection
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+      
+    # Cache the CodeQL databases for faster analysis
+    - name: Cache CodeQL databases
+      uses: actions/cache@v3
+      with:
+        path: ~/.codeql/databases
+        key: ${{ runner.os }}-codeql-db-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-codeql-db-
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
         languages: javascript
-        # Use the GitHub Container Registry (GHCR) to access the custom query pack
+        # Use the GitHub Container Registry (GHCR) to access the custom query pack from org scope
         queries: timothywarner-org/globomantics-security-queries@main
+        # Enable additional query packs for enhanced coverage
+        packs: +security-extended,security-and-quality
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
       with:
-        category: "/language:javascript" 
+        category: "/language:javascript"
+        upload: true # Upload SARIF results to GitHub Advanced Security
+
+    - name: Upload CodeQL Database
+      uses: actions/upload-artifact@v3
+      with:
+        name: codeql-database
+        path: ~/.codeql/databases
+        retention-days: 7
+        if-no-files-found: warn
+    
+    - name: Generate CodeQL Analysis Summary
+      id: summary
+      run: |
+        echo "## CodeQL Analysis Summary" >> $GITHUB_STEP_SUMMARY
+        echo "🔍 Analysis completed using org-scoped custom query pack" >> $GITHUB_STEP_SUMMARY
+        echo "📊 Query pack: timothywarner-org/globomantics-security-queries@main" >> $GITHUB_STEP_SUMMARY
+        echo "⏱️ Analysis completed at: $(date)" >> $GITHUB_STEP_SUMMARY
+        if [ -n "${{ github.event.inputs.reason }}" ]; then
+          echo "🔖 Trigger reason: ${{ github.event.inputs.reason }}" >> $GITHUB_STEP_SUMMARY
+        fi 
